--- a/style.css
+++ b/style.css
@@ -1,20 +1,36 @@
 *{
     padding: 0;
-    margin: 0;
+    margin: 30;
     overflow-x: hidden;
 }
+
+.title {
+    display:flex;
+    justify-content:center;
+    padding:20px;
+    font-family: 'Ubuntu Mono', monospace;
+    font-size:20px;
+    margin-top:200px;
+}
+.score {
+    font-family: 'Ubuntu Mono', monospace;
+    font-size:20px;
+}
+
 .game{
     width: 500px;
     height: 200px;
     border: 1px solid black;
     margin: auto;
+    background-color:rgba(255, 236, 112, 0.548);
 }
 #character{
-    width: 20px;
+    width: 70px;
     height: 50px;
-    background-color: red;
+    /* background-color: red; */
     position:relative;
     top: 150px;
+    
 }
 .animate{
     animation: jump 0.3s linear;
@@ -27,13 +43,16 @@
 }
 
 #block{
-    background-color: blue;
-    width: 20px;
-    height: 20px;
+    /* background-color: blue; */
+    width: 50px;
+    height: 40px;
     position: relative;
-    top: 130px;
+    top: 110px;
     left: 500px;
     animation: block 1s infinite linear;
+    /* color:white; */
+    /* border-radius:100%; */
+    /* border:30px red solid; */
 }
 @keyframes block{
     0%{left: 500px}
@@ -41,4 +60,14 @@
 }
 p{
     text-align: center;
+}
+
+.image {
+    width:90px;
+    height:90px;
+}
+
+.image2 {
+    width:100%;
+    height:100%;
 }
